Added @media queries
Added a pair of media queries to adjust the name part of the header as
the windows size decreases.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
         <h3>Other stuff:</h3>
 		<p>I dabble at photography.  I took the pictures on this site.</p>
-        <p>This web page / site will serve as a personal bio and a place for me to practice and demonstrate what I've learned.  It's very simple now as I've really just begun.  But check back often.  See my to-do list below for an idea of coming changes.</p>
+        <p>This web page / site will serve as a personal bio and a place for me to practice and demonstrate what I've learned.  It's very simple now as I've really just begun.  But check back often, I'll be making incremental changes as I try and learn new things.  See my to-do list below for an idea of coming changes.</p>
 		
 		<p class="infoBar">Additional information available at:&nbsp; 
 		<a href = "http://linkedin.com/in/terrywolfrey" target=_blank>www.linkedin.com</a>
@@ -67,7 +67,8 @@
     <div class="todo infoBar">
         <p class="todo">To-Do
             <ul>
-                <li>Fix the footer area positioning.</li>
+                <li>Add more Media Query rules.</li>
+                <li>Maintain a 'shoulder' at sm. sizes.</li>
                 <li>Add some more pages.</li>
                 <li>Add some JavaScript.</li>
                 <li>Clean up code & experiment.</li>
@@ -79,6 +80,7 @@
             <ul>
                 <!-- Completed items here -->
                 <!-- Figure out a better way -->
+                <li>Change the footer area positioning.</li>
                 <li>Fix the banner area positioning.</li>
                 <li>Make everthing aobut "2 sizes" smaller.</li>
                 <li>Make background stationary.</li>
