Tweaked @media to-do bubble handling
Remove floats below threshold.  And other minor tweaks.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
     <div class="todo infoBar">
         <p class="todo">To-Do
             <ul>
-                <li>Add more Media Query rules.</li>
-                <li>Maintain a 'shoulder' at sm. sizes.</li>
+                <li>Add more Media Query rules?</li>
                 <li>Add some more pages.</li>
                 <li>Add some JavaScript.</li>
                 <li>Clean up code & experiment.</li>
@@ -80,6 +79,7 @@
             <ul>
                 <!-- Completed items here -->
                 <!-- Figure out a better way -->
+                <li>Add margin to content area.</li>
                 <li>Change the footer area positioning.</li>
                 <li>Fix the banner area positioning.</li>
                 <li>Make everthing aobut "2 sizes" smaller.</li>
