Foot behavior fixed
Wrapped the to-do elements into a footer div and applied margins to it.
Other slight tweaks.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <p>This web page / site will serve as a personal bio and a place for me to practice and demonstrate what I've learned.  It's very simple now as I've really just begun.  But check back often, I'll be making incremental changes as I try and learn new things.  See my to-do list below for an idea of coming changes.</p>
 		
 		<p class="infoBar">Additional information available at:&nbsp; 
-		<a href = "http://linkedin.com/in/terrywolfrey" target=_blank>www.linkedin.com</a>
+		<a href = "http://linkedin.com/in/terrywolfrey" target=_blank>linkedin</a>
 		<!-- http:// is required, not www. -->
 		<!-- target=_blank in the opening tag will open link in a new page. -->
 		</p>
@@ -64,34 +64,36 @@
 		</div> <!-- End of div id="wrap2" -->
 	</main>
     
-    <div class="todo infoBar">
-        <p class="todo">To-Do
-            <ul>
-                <li>Add more Media Query rules?</li>
-                <li>Add some more pages.</li>
-                <li>Add some JavaScript.</li>
-                <li>Clean up code & experiment.</li>
-            </ul>
-        </p>
-    </div>
-    <div class="todo infoBar todoComplete">
-        <p class="todo">Complete
-            <ul>
-                <!-- Completed items here -->
-                <!-- Figure out a better way -->
-                <li>Add margin to content area.</li>
-                <li>Change the footer area positioning.</li>
-                <li>Fix the banner area positioning.</li>
-                <li>Make everthing aobut "2 sizes" smaller.</li>
-                <li>Make background stationary.</li>
-                <li>Put this up on my github</li>
-                <li>Add a github link</li>
-                <li>Remove the list bullets.</li>
-                <li>Edit the todo list style.</li>
-            </ul>
-		</p>
-    </div>
-    
+    <div class="footer">
+        <div class="todo infoBar">
+            <p class="todo">To-Do
+                <ul>
+                    <li>Add more Media Query rules?</li>
+                    <li>Add some more pages.</li>
+                    <li>Add some JavaScript.</li>
+                    <li>Clean up code & experiment.</li>
+                </ul>
+            </p>
+        </div>      <!-- End class="todo infoBar" -->
+
+        <div class="todo infoBar todoComplete">
+            <p class="todo">Complete
+                <ul>
+                    <!-- Completed items here -->
+                    <!-- Figure out a better way -->
+                    <li>Add margin to content area.</li>
+                    <li>Change the footer area positioning.</li>
+                    <li>Fix the banner area positioning.</li>
+                    <li>Make everthing aobut "2 sizes" smaller.</li>
+                    <li>Make background stationary.</li>
+                    <li>Put this up on my github</li>
+                    <li>Add a github link</li>
+                    <li>Remove the list bullets.</li>
+                    <li>Edit the todo list style.</li>
+                </ul>
+            </p>
+        </div>  <!-- End div class="todo infoBar todoComplete" -->
+    </div>  <!-- End div class="footer" -->
 	</body>
 
 </html>
